--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 22
-    buildToolsVersion "22.0.1"
+    compileSdkVersion 23
+    buildToolsVersion "23.0.3"
 
     defaultConfig {
         applicationId "com.example.sawai.coordinatorlayoutexamples"
         minSdkVersion 16
-        targetSdkVersion 22
+        targetSdkVersion 23
         versionCode 1
         versionName "1.0"
     }
@@ -23,11 +23,20 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
 
-    compile 'com.android.support:recyclerview-v7:22.2.0'
-    compile 'com.android.support:appcompat-v7:22.2.0'
-    compile 'com.android.support:design:22.2.0'
-    compile 'com.getbase:floatingactionbutton:1.10.1'
+//    compile 'com.android.support:recyclerview-v7:22.2.0'
+//    compile 'com.android.support:appcompat-v7:22.2.0'
+//    compile 'com.android.support:design:22.2.0'
+//    compile 'com.getbase:floatingactionbutton:1.10.1'
+//    compile 'de.hdodenhof:circleimageview:1.3.0'
+//    compile 'com.android.support:cardview-v7:22.2.0'
 
+
+    compile 'de.hdodenhof:circleimageview:1.3.0'
+    compile 'com.getbase:floatingactionbutton:1.10.1'
+    compile 'com.android.support:recyclerview-v7:23.1.1'
+    compile 'com.android.support:design:23.1.1'
+    compile 'com.android.support:appcompat-v7:23.1.1'
+    compile 'com.android.support:cardview-v7:23.1.1'
 
 
 }
